# AI-Argus-Harness

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
ai_argus/: __init__.py  cli.py  config.py  models.py
ai_argus/chaining/: __init__.py  chain_constructor.py
ai_argus/core/: __init__.py  auth.py  cache.py  context.py  orchestrator.py  plugin_loader.py  stages.py  suppressions.py
ai_argus/evidence/: __init__.py  normalizer.py  store.py
ai_argus/graph/: __init__.py  asset_graph.py  identity_graph.py
ai_argus/llm/: __init__.py  provider.py
ai_argus/reliability/: __init__.py  adversarial_reviewer.py  claim_verifier.py  completeness_gate.py  grounding.py  validator.py  voting.py
ai_argus/reporting/: __init__.py  executive.py  json_report.py  markdown_report.py  notify.py  sarif.py
ai_argus/scanners/: __init__.py  _inventory.py  application.py  base.py  cicd.py  cloud.py  data_exposure.py  domain.py  endpoint.py  kubernetes.py  saas.py  (+3 more)
docs/: architecture.md  coverage.md  enterprise-deployment.md  finding-schema.md  generate_design_pdf.py  generate_improvements_report.py  reliability.md  scanner-plugin-spec.md  stages.md
examples/: argus.yaml  config.example.json  inventory.json  redteam-plan.md  sample-finding.json  sample-report.sarif
tests/: test_notify.py  test_pipeline.py
(+14 files in other folders)
